# Janus

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: development.md
.github/workflows/: black.yaml  build_and_publish_pypi.yaml  build_docker_file_on_push.yaml  build_docker_file_on_release.yaml  bumpversion.yml  deploy_prod.yml  deploy_stage.yml
Janus/: __init__.py
Janus/models/multiqc/: models.py
Janus/models/workflow/: models.py
docs/: conf.py  index.rst  janus.server.rst
janus/: __init__.py
janus/api/: main.py
janus/api/endpoints/: collect_qc.py
janus/api/models/: post_request.py
janus/constants/: FileTag.py  workflow.py  workflow_models.py
janus/dto/: collect_qc_request.py  collect_qc_response.py  post_request.py
janus/exceptions/: exceptions.py
janus/io/: read_json.py
janus/mappers/: mappers.py  tag_to_models.py  tag_to_parse_function.py  workflow_to_collector.py  workflow_to_model.py  workflow_to_service.py  workflow_to_tag.py
janus/models/multiqc/: models.py
janus/models/workflow/: balsamic.py  models.py  rnafusion.py
janus/parser/: parser.py
janus/server/: api.py  utils.py
janus/services/: balsamic_collect_qc_service.py  collect_qc_service.py  parser.py  workflow_collect_qc_services.py
tests/: conftest.py
tests/fixtures/files/: fastp.json  picard_AlignmentSummaryMetrics.json  somalier.json  (+7 more)
tests/io/: test_read_json.py
tests/parser/: test_parser.py
tests/services/: test_collect_qc_service.py  test_parser.py
(+39 files in other folders)
