[tool.poetry]
name = "janus"
version = "0.1.0"
description = ""
authors = ["Christian Oertlin <christian.oertlin@scilifelab.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

